@@ -167,9 +167,11 @@ public:
 
     unsigned hash() const
     {
-#if PLATFORM(WIN) && !USE(CAIRO)
+#if USE(CAIRO)
+        return PtrHash<cairo_scaled_font_t*>::hash(m_scaledFont.get());
+#elif PLATFORM(WIN)
         return m_font ? m_font->hash() : 0;
-#elif OS(DARWIN)
+#elif PLATFORM(COCOA)
         uintptr_t flags = static_cast<uintptr_t>(m_isHashTableDeletedValue << 5 | m_textRenderingMode << 3 | m_orientation << 2 | m_syntheticBold << 1 | m_syntheticOblique);
 #if USE(APPKIT)
         uintptr_t fontHash = (uintptr_t)m_font.get();
@@ -178,8 +180,8 @@ public:
 #endif
         uintptr_t hashCodes[3] = { fontHash, m_widthVariant, flags };
         return StringHasher::hashMemory<sizeof(hashCodes)>(hashCodes);
-#elif USE(CAIRO)
-        return PtrHash<cairo_scaled_font_t*>::hash(m_scaledFont.get());
+#else
+#error "Unsupported configuration"
 #endif
     }
 
